--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -29,5 +29,6 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        args: >
-          -Dsonar.sarifReportPaths=trivy.sarif
+        with:
+          args: >
+            -Dsonar.sarifReportPaths=trivy.sarif
