--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=skynet-bd_public-random
 sonar.organization=skynet-bd-1
 sonar.sources=.
-sonar.sarifReportPaths=trivy.sarif
+sonar.sarifReportPaths=custom.sarif
