--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -29,3 +29,6 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.sarifReportPaths=custom.sarif
