--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -13,6 +13,7 @@ jobs:
       TRIVY_SARIF_PATH: .trivy.sarif
     steps:
       - uses: actions/checkout@v4
+
       - name: Trivy Scan
         uses: aquasecurity/trivy-action@0.29.0
         with:
@@ -21,6 +22,10 @@ jobs:
           format: sarif
           output: ${{ env.TRIVY_SARIF_PATH }}
           ignore-unfixed: true
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ${{ env.TRIVY_SARIF_PATH }}
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
